# Research_Dashboard

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_metadata_tables.py
backend/app/: __init__.py  analytics.py  compute.py  db.py  inference.py  main.py
backend/app/api/: __init__.py  auth.py  dependencies.py  export.py  projects.py  refresh.py  results.py  router.py  schema.py  views.py
backend/app/api/routes/: __init__.py  admin.py  projects.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py  user_store.py
backend/app/models/: __init__.py  auth.py  common.py  project.py  refresh_job.py  results.py  saved_view.py  schema.py  specs.py  uploads.py
backend/app/repositories/: __init__.py  metadata_repository.py
backend/app/schemas/: refresh_job.py  views.py
backend/app/services/: __init__.py  compute_engine.py  duckdb_service.py  ingestion.py  metadata.py  metadata_service.py  refresh_pipeline.py  schema_inference.py  schema_registry_service.py  store.py  transformation_engine.py  views_service.py
backend/app/storage/: __init__.py  path_manager.py
backend/migrations/sql/: 202603060001_add_refresh_job.sql
backend/research_dashboard/: __init__.py  compute_engine.py
backend/scripts/: bootstrap_admin.py  generate_sample_data.py
backend/tests/: test_compute.py  test_compute_engine.py  test_inference.py
(+24 files in other folders)
